# tpg-rtmap-api

./: .env  .env.example  .gitignore  Cargo.toml
src/: main.rs
src/api/: direction.rs  leg.rs  line.rs  mod.rs  shape.rs  stop.rs  trip.rs
src/hrdf/: BFKOORD_WGS  LINIE
src/model/: bitfield.rs  direction.rs  direction_leg.rs  enums.rs  information.rs  leg_step.rs  line.rs  line_stop.rs  mod.rs  shape.rs  shape_point.rs  shape_stop.rs  step_path.rs  stop.rs  trip.rs  trip_stop.rs  types.rs
src/repository/: database.rs  gtfs.rs  hrdf.rs  maps.rs  mod.rs
