[package]
name = "tpg-rtmap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = { version = "^1", features = ["derive"] }
env_logger = "0.10"
log = "^0.4"
# strum_macros = "^0.25"
# strum = { version = "^0.25", features = ["derive"] }
derive_more = "^0.99"
sqlx = { version = "^0.7", features = ["postgres", "runtime-tokio-rustls"] }
csv = "1.2.2"
dotenv = "0.15.0"
chrono = "0.4.26"
serde_json = "1.0.105"
unicode-segmentation = "1.10.1"
async-trait = "0.1.73"
